______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.191:

* XINS/Java Server Framework:
  - Slightly improved internal error checking in AccessRule class.

* XINS/Java Client Framework:
  - Fixed typo in both UnacceptableCallResultException and
    UnsuccessfulCallException classes.

* XINS/Java Common Library:
  - Slightly improved implementation of HungarianMapper.

* Generated java code:
  - Improved Javadoc for the getDOMElement() method.

* Build and release process:
  - The release process is aborted if the .sourceforge.properties does not
    exist or if it does not define the required properties.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.190:

* XINS/Java Common Library:
  - Added an append(boolean) method to the LogdocStringBuffer class. This is
    needed in order to properly support the 'boolean' type in Logdoc.
  - Removed unused private no-arg constructor from class
    org.xins.common.types.List.

* Generated build file:
  - Added commons-httpclient.jar and jakarta-oro.jar to the classpath for the
    creation of the javadoc.
  - The create targets now create XML files with the encoding set to UTF-8.

* Generated specification documentation:
  - The XML encoding is now showed in the example output section.
  - If an example result has a result code that requires some output
    parameters but the example doesn't define them, the generation fails.

* Specification:
  - Removed the "success" attribute from the "example" element for functions.
  - Added the elements "input-example" and "output-example" in the "example"
    element. The "example-value" element is now deprecated.
  - Added a "pcdata" element to be able to set PCDATA content in an element
    of the data section.

* Logdoc:
  - Changed the logdoc domain for common from org.xins.util to
    org.xins.common.

* Libraries: